# zkcook

./: .pre-commit-config.yaml  PoC regressor.ipynb  PoC.ipynb  README.md  data_transformer.py  feature_models_space.py  model_evaluator.py  model_info.py  model_penalicer.py  model_trainer.py  pyproject.toml
.github/workflows/: onpush.yml  onrelease.yml
auto_zkml/: __init__.py  model_reducer.py
auto_zkml/model_toolkit/: data_transformer.py  feature_models_space.py  metrics.py  model_info.py  model_penalicer.py
auto_zkml/serializer/: lgbm.py  serialize.py
giza/zkcook/: __init__.py  model_reducer.py
giza/zkcook/model_toolkit/: data_transformer.py  model_trainer.py
giza/zkcook/serializer/: lgbm.py  serialize.py  xg.py
giza_mlutils/: __init__.py  model_reducer.py
giza_mlutils/model_toolkit/: README.md  data_transformer.py  feature_models_space.py  metrics.py  model_evaluator.py  model_info.py  model_penalicer.py  model_trainer.py
giza_mlutils/model_toolkit/custom_transformers/: customPCA.py  customRFE.py
giza_mlutils/serializer/: __init__py  lgbm.py  serialize.py  xg.py
mcr/: feature_models_space.py  mcr.py  model_evaluator.py  model_info.py  model_trainer.py
serializer/: lgbm.py
tutorials/: end_to_end_example.ipynb  reduce_model_complexity.ipynb  serialize_mi_model.ipynb  serialize_my_model.ipynb
